--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ language: python
 python:
   - "3.3"
 
-install: "pip -r install requirements.txt"
+install: "pip install -r requirements.txt"
 script: nose2
 
