Fix line endings in metadata.txt

--- a/.gitattributes
+++ b/.gitattributes
@@ -6,3 +6,4 @@ projectgenerator.zip export-ignore
 *.sh export-ignore
 */__pycache__ export-ignore
 projectgenerator/tests export-ignore
+projectgenerator/metadata.txt eol=lf
