Add pyqt dev tools

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,11 @@ language: python
 python:
   - "3.3"
 
+addons:
+  apt:
+    packages:
+    - pyqt5-dev-tools
+
 install: "pip install -r requirements.txt"
 script:
 - nose2
