--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ python:
 addons:
   apt:
     packages:
-    - pyqt5-dev-tools
+    - python3-pyqt5
 
 install: "pip install -r requirements.txt"
 script:
