--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ dist: trusty
 addons:
   apt:
     packages:
-    - python3-pyqt5
+    - pyqt5-dev-tools
 
 install: "pip install -r requirements.txt"
 script:
