--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ addons:
   apt:
     packages:
     - pyqt5-dev-tools
+    - qttools5-dev-tools
 
 install: "pip install -r requirements.txt"
 script:
