--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,5 @@
-language: python
-python:
-  - "3.3"
-
-dist: trusty
-
-addons:
-  apt:
-    packages:
-    - pyqt5-dev-tools
-    - qttools5-dev-tools
-
-install: "pip install -r requirements.txt"
 script:
-- nose2
+- docker-compose -f .docker/docker-compose.travis.yml run qgis /usr/src/.docker/run-docker-tests.sh
 
 after_success:
 - scripts/ci/deploy.sh
