Temporary workaround for unicode errors
until new QGIS docker images with
https://github.com/qgis/QGIS/commit/16c6bf998aefb3cfef1f9eb49a8552a6372c98db
are available

--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -4,4 +4,6 @@ MAINTAINER Matthias Kuhn <matthias@opengis.ch>
 RUN apt-get update && \
     apt-get -y install default-jre 
 
+ENV LANG=C.UTF-8
+
 WORKDIR /
