Test different docker tags and deploy in stages

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,20 @@ python:
 
 install:
   - pip install -r requirements.txt
-  - docker build .docker
+  - docker build --build-arg QGIS_TEST_VERSION=${QGIS_TEST_VERSION}  .docker
 
-script:
-  - docker-compose -f .docker/docker-compose.travis.yml run qgis /usr/src/.docker/run-docker-tests.sh
-
-after_success:
-  - scripts/ci/deploy.sh
+jobs:
+  include:
+    - stage: test
+      env:
+        QGIS_TEST_VERSION="latest"
+      script: docker-compose -f .docker/docker-compose.travis.yml run qgis /usr/src/.docker/run-docker-tests.sh
+    - stage: test
+      env:
+        QGIS_TEST_VERSION="2.99-alpha"
+      script: docker-compose -f .docker/docker-compose.travis.yml run qgis /usr/src/.docker/run-docker-tests.sh
+    - stage: deploy
+      script: scripts/ci/deploy.sh
 
 env:
   global:
