--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -1,4 +1,5 @@
-FROM  qgis/qgis
+ARG QGIS_TEST_VERSION=latest
+FROM  qgis/qgis:${QGIS_TEST_VERSION}
 MAINTAINER Matthias Kuhn <matthias@opengis.ch>
 
 RUN apt-get update && \
