[travis] Newer docker version

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,12 @@ language: python
 python:
   - 3.5
 
+before_install:
+  - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
+  - sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
+  - sudo apt-get update
+  - sudo apt-get -y install docker-ce
+
 install:
   - pip install -r requirements.txt
   - docker build --build-arg QGIS_TEST_VERSION=${QGIS_TEST_VERSION}  .docker
