--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ jobs:
       script: docker-compose -f .docker/docker-compose.travis.yml run qgis /usr/src/.docker/run-docker-tests.sh
 
     - stage: deploy
-      # if: tag IS present
+      if: tag IS present
       install:
         - pip install -r requirements.txt
       script: scripts/ci/deploy.sh
