--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -3,7 +3,7 @@ FROM  qgis/qgis:${QGIS_TEST_VERSION}
 MAINTAINER Matthias Kuhn <matthias@opengis.ch>
 
 RUN apt-get update && \
-    apt-get -y install default-jre 
+    apt-get -y install openjdk-8-jre
 
 ENV LANG=C.UTF-8
 
