Using requirements.txt to update or install python packages inside docker image

--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -3,7 +3,12 @@ FROM  qgis/qgis:${QGIS_TEST_VERSION}
 MAINTAINER Matthias Kuhn <matthias@opengis.ch>
 
 RUN apt-get update && \
-    apt-get -y install openjdk-8-jre
+    apt-get -y install openjdk-8-jre \
+    python3-pip \
+    && rm -rf /var/lib/apt/lists/*
+
+COPY ./requirements.txt /tmp/
+RUN pip3 install -r /tmp/requirements.txt
 
 ENV LANG=C.UTF-8
 
