--- a/.travis.yml
+++ b/.travis.yml
@@ -13,10 +13,10 @@ install:
 
 jobs:
   include:
-#    - stage: test
-#      env:
-#        QGIS_TEST_VERSION="latest"
-#      script: docker-compose -f .docker/docker-compose.travis.yml run qgis /usr/src/.docker/run-docker-tests.sh
+    - stage: test
+      env:
+        QGIS_TEST_VERSION="latest"
+      script: docker-compose -f .docker/docker-compose.travis.yml run qgis /usr/src/.docker/run-docker-tests.sh
     - stage: test
       env:
         QGIS_TEST_VERSION="release-3_0"
