Add a new deploy build step for pushing translations
on branch master

This reverts commit 416ac0036545a9b36ea0b2ee87820f713260fd0f.

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,9 +23,15 @@ jobs:
       script: docker-compose -f .docker/docker-compose.travis.yml run qgis /usr/src/.docker/run-docker-tests.sh
 
     - stage: deploy
+      if: tag IS present
       install:
         - pip install -r requirements.txt
       script: scripts/ci/deploy.sh
+    - stage: deploy
+      if: branch == master
+      install:
+        - pip install -r requirements.txt
+      script: scripts/ci/update-translations.sh
 
 env:
   global:
