--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,7 @@ jobs:
     - stage: deploy
       if: branch == master
       install:
+        - sudo apt-get install -y pyqt5-dev-tools
         - pip install -r requirements.txt
       script: scripts/ci/update-translations.sh
 
