--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ jobs:
         - pip install -r requirements.txt
       script: scripts/ci/deploy.sh
     - stage: deploy
-      if: branch == master
+      if: branch = master
       install:
         - sudo apt-get install -y pyqt5-dev-tools
         - pip install -r requirements.txt
