--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,10 @@ jobs:
       script: docker-compose -f .docker/docker-compose.travis.yml run qgis /usr/src/.docker/run-docker-tests.sh
     - stage: test
       env:
+        QGIS_TEST_VERSION="release-3_2"
+      script: docker-compose -f .docker/docker-compose.travis.yml run qgis /usr/src/.docker/run-docker-tests.sh
+    - stage: test
+      env:
         QGIS_TEST_VERSION="release-3_0"
       script: docker-compose -f .docker/docker-compose.travis.yml run qgis /usr/src/.docker/run-docker-tests.sh
 
