--- a/.tx/config
+++ b/.tx/config
@@ -1,8 +1,8 @@
 [main]
 host = https://www.transifex.com
 
-[projectgenerator.projectgenerator]
-source_file = i18n/projectgenerator_en.ts
+[QgisModelBaker.QgisModelBaker]
+source_file = i18n/QgisModelBaker_en.ts
 source_lang = en
-file_filter = i18n/projectgenerator_<lang>.ts
+file_filter = i18n/QgisModelBaker_<lang>.ts
 type = QT
