--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,14 @@
 language: python
 python:
-  - 3.5
-
-git:
-  submodules: false
+  - 3.7
  
 services:
   - docker
 
 before_install:
-  - git submodule update --init --recursive
 
 install:
+  - pip install -r requirements.txt
   - docker build --build-arg QGIS_TEST_VERSION=${QGIS_TEST_VERSION} -f .docker/Dockerfile .
 
 jobs:
@@ -27,16 +24,17 @@ jobs:
 
     - stage: deploy
       if: tag IS present
-      install:
-        - sudo apt-get install -y python3-pyodbc
-        - pip install -r requirements.txt
-      script: plugin_ci/release/release.sh
+      script:
+        - >
+         qgis-plugin-ci release ${TRAVIS_TAG}
+         --transifex-token ${TX_TOKEN}
+         --github-token ${GH_TOKEN}
+         --osgeo-username ${OSGEO_USERNAME}
+         --osgeo-password ${OSGEO_PASSWORD}
+
     - stage: deploy
       if: branch = master
-      install:
-        - sudo apt-get install -y unixodbc unixodbc-dev pyqt5-dev-tools
-        - pip install -r requirements.txt
-      script: scripts/ci/update-translations.sh
+      script: qgis-plugin-ci push-translation ${TX_TOKEN}
 
 env:
   global:
