use Docker without apt-get update
this should result in faster jobs on Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,11 @@ python:
 
 git:
   submodules: false
+ 
+services:
+  - docker
 
 before_install:
-  - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
-  - sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
-  - sudo apt-get update
-  - sudo apt-get -y install docker-ce
   - git submodule update --init --recursive
 
 install:
