--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ jobs:
     - stage: deploy
       if: branch = master
       install:
-        - sudo apt-get install -y python3-pyodbc pyqt5-dev-tools
+        - sudo apt-get install -y unixodbc unixodbc-dev pyqt5-dev-tools
         - pip install -r requirements.txt
       script: scripts/ci/update-translations.sh
 
