--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,7 @@ jobs:
          qgis-plugin-ci release ${TRAVIS_TAG}
          --transifex-token ${TX_TOKEN}
          --github-token ${GH_TOKEN}
+         --create-plugin-repo
          --osgeo-username ${OSGEO_USERNAME}
          --osgeo-password ${OSGEO_PASSWORD}
 
