--- a/.travis.yml
+++ b/.travis.yml
@@ -21,19 +21,28 @@ jobs:
         QGIS_TEST_VERSION="release-3_4"
       script: docker-compose -f .docker/docker-compose.travis.yml run qgis /usr/src/.docker/run-docker-tests.sh
 
-    - stage: deploy
-      if: tag IS present
+    - stage: deploy master
+      if: tag IS present AND branch = master
       install:
         - pip install qgis-plugin-ci
       script:
         - >
-         LD_LIBRARY_PATH=/home/travis/virtualenv/python$(python3 --version | cut -d ' ' -f2)/lib/python${TRAVIS_PYTHON_VERSION}/site-packages/PyQt5/Qt/lib:$LD_LIBRARY_PATH
          qgis-plugin-ci release ${TRAVIS_TAG}
          --transifex-token ${TX_TOKEN}
          --github-token ${GH_TOKEN}
-         --create-plugin-repo
          --osgeo-username ${OSGEO_USERNAME}
          --osgeo-password ${OSGEO_PASSWORD}
+
+    - stage: deploy testing branches
+        if: tag IS present AND branch != master
+        install:
+          - pip install qgis-plugin-ci
+        script:
+          - >
+           qgis-plugin-ci release ${TRAVIS_TAG}
+           --transifex-token ${TX_TOKEN}
+           --github-token ${GH_TOKEN}
+
 
     - stage: deploy
       if: branch = master
