--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,11 @@
 language: python
 python:
-  - 3.5
-
-git:
-  submodules: false
+  - 3.7
+ 
+services:
+  - docker
 
 before_install:
-  - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
-  - sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
-  - sudo apt-get update
-  - sudo apt-get -y install docker-ce
-  - git submodule update --init --recursive
 
 install:
   - docker build --build-arg QGIS_TEST_VERSION=${QGIS_TEST_VERSION} -f .docker/Dockerfile .
@@ -26,17 +21,34 @@ jobs:
         QGIS_TEST_VERSION="release-3_4"
       script: docker-compose -f .docker/docker-compose.travis.yml run qgis /usr/src/.docker/run-docker-tests.sh
 
-    - stage: deploy
-      if: tag IS present
+    - stage: deploy master
+      if: tag IS present AND branch = master
       install:
-        - pip install -r requirements.txt
-      script: plugin_ci/release/release.sh
+        - pip install qgis-plugin-ci
+      script:
+        - >
+         qgis-plugin-ci release ${TRAVIS_TAG}
+         --transifex-token ${TX_TOKEN}
+         --github-token ${GH_TOKEN}
+         --osgeo-username ${OSGEO_USERNAME}
+         --osgeo-password ${OSGEO_PASSWORD}
+
+    - stage: deploy testing branches
+      if: tag IS present AND branch != master
+      install:
+        - pip install qgis-plugin-ci
+      script:
+        - >
+         qgis-plugin-ci release ${TRAVIS_TAG}
+         --transifex-token ${TX_TOKEN}
+         --github-token ${GH_TOKEN}
+
+
     - stage: deploy
       if: branch = master
       install:
-        - sudo apt-get install -y pyqt5-dev-tools
-        - pip install -r requirements.txt
-      script: scripts/ci/update-translations.sh
+        - pip install qgis-plugin-ci
+      script: LD_LIBRARY_PATH=/home/travis/virtualenv/python$(python3 --version | cut -d ' ' -f2)/lib/python${TRAVIS_PYTHON_VERSION}/site-packages/PyQt5/Qt/lib:$LD_LIBRARY_PATH qgis-plugin-ci push-translation ${TX_TOKEN}
 
 env:
   global:
