--- a/.travis.yml
+++ b/.travis.yml
@@ -22,8 +22,8 @@ jobs:
         QGIS_TEST_VERSION="release-3_4"
       script: docker-compose -f .docker/docker-compose.travis.yml run qgis /usr/src/.docker/run-docker-tests.sh
 
-    - stage: deploy master
-      if: tag IS present AND branch = master
+    - stage: deploy
+      if: tag IS present
       install:
         - pip install qgis-plugin-ci
       script:
@@ -33,16 +33,6 @@ jobs:
          --github-token ${GH_TOKEN}
          --osgeo-username ${OSGEO_USERNAME}
          --osgeo-password ${OSGEO_PASSWORD}
-
-    - stage: deploy testing branches
-      if: tag IS present AND branch != master
-      install:
-        - pip install qgis-plugin-ci
-      script:
-        - >
-         qgis-plugin-ci release ${TRAVIS_TAG}
-         --transifex-token ${TX_TOKEN}
-         --github-token ${GH_TOKEN}
 
     - stage: deploy
       if: branch = master
