--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,10 @@ jobs:
       script: docker-compose -f .docker/docker-compose.travis.yml run qgis /usr/src/.docker/run-docker-tests.sh
     - stage: test
       env:
+        QGIS_TEST_VERSION="latest"
+      script: docker-compose -f .docker/docker-compose.travis.yml run -e "PGHOST=postgres11" qgis /usr/src/.docker/run-docker-tests.sh
+    - stage: test
+      env:
         QGIS_TEST_VERSION="release-3_4"
       script: docker-compose -f .docker/docker-compose.travis.yml run qgis /usr/src/.docker/run-docker-tests.sh
 
