--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,7 @@ jobs:
          --osgeo-password ${OSGEO_PASSWORD}
 
     - stage: deploy
-      if: branch = master
+      if: branch = master and type = push
       install:
         - pip install qgis-plugin-ci
       script: qgis-plugin-ci push-translation ${TX_TOKEN}
