--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -54,7 +54,7 @@ jobs:
       - name: Upload release assets
         uses: AButler/upload-release-assets@v2.0
         with:
-          files: ./qfieldsync.${GITHUB_REF##*/}.zip
+          files: ./QgisModelBaker.${GITHUB_REF##*/}.zip
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           release-tag: ${GITHUB_REF##*/}
 
