replace qgis.modelbaker.referenceData with ch.interlis prefix

--- a/QgisModelBaker/tests/testdata/ilirepo/24/metaconfig/opengisch_KbS_LV95_V1_4_test.ini
+++ b/QgisModelBaker/tests/testdata/ilirepo/24/metaconfig/opengisch_KbS_LV95_V1_4_test.ini
@@ -1,6 +1,6 @@
 [CONFIGURATION]
 qgis.modelbaker.layertree=file:layertree/opengis_layertree_KbS_LV95_V1_4.yaml
-qgis.modelbaker.referenceData=file:catalogue/KbS_Codetexte_V1_4.xml
+ch.interlis.referenceData=file:catalogue/KbS_Codetexte_V1_4.xml
 
 [ch.ehi.ili2db]
 defaultSrsCode=3857
