--- a/QgisModelBaker/tests/testdata/ilirepo/24/metaconfig/opengisch_KbS_LV95_V1_4.ini
+++ b/QgisModelBaker/tests/testdata/ilirepo/24/metaconfig/opengisch_KbS_LV95_V1_4.ini
@@ -1,12 +1,14 @@
 [CONFIGURATION]
-qgis.modelbaker.layertree=ilidata:ch.opengis.config.KbS_LV95_V1_4_layertree
+qgis.modelbaker.layertree=file:layertree/opengis_layertree_KbS_LV95_V1_4.yaml
 ch.interlis.referenceData=ilidata:ch.sh.ili.catalogue.KbS_Codetexte_V1_4
 
 [ch.ehi.ili2db]
-models = KbS_Basis_V1_4
+defaultSrsCode=3857
+models=KbS_Basis_V1_4
+preScript=file:sql/opengisch_KbS_LV95_V1_4_test.sql
 iliMetaAttrs=ilidata:ch.opengis.config.KbS_LV95_V1_4_toml
 
 [qgis.modelbaker.qml]
 "Belasteter_Standort (Geo_Lage_Polygon)"=ilidata:ch.opengis.topping.opengisch_KbS_LV95_V1_4_001
-"Belasteter_Standort (Geo_Lage_Punkt)"=ilidata:ch.opengis.topping.opengisch_KbS_LV95_V1_4_004
+"Belasteter_Standort (Geo_Lage_Punkt)"=file:qml/opengisch_KbS_LV95_V1_4_001_belasteterstandort_punkt.qml
 Parzellenidentifikation=ilidata:ch.opengis.topping.opengisch_KbS_LV95_V1_4_005
