--- a/QgisModelBaker/tests/testdata/ilirepo/24/layertree/opengis_layertree_KbS_LV95_V1_4_GPKG.yaml
+++ b/QgisModelBaker/tests/testdata/ilirepo/24/layertree/opengis_layertree_KbS_LV95_V1_4_GPKG.yaml
@@ -35,7 +35,7 @@ legend:
               - "LocalisedMText":
               - "MultilingualText":
               - "LocalisedText":
-        - "Text Infos":
+        - "Other Infos":
             group: true
             checked: true
             expanded: false
