--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,12 +1,12 @@
 # Project information
-site_name: QgisModelBaker
+site_name: QGIS Model Baker
 site_description: >-
   This site contains documentation about QGIS Model Baker
 
 # Repository
-repo_name: signedav/mkdocstest
-repo_url: https://github.com/signedav/mkdocstest
-edit_uri: https://github.com/signedav/mkdocstest/tree/master/docs/
+repo_name: opengisch/QgisModelBaker
+repo_url: https://github.com/opengisch/QgisModelBaker
+edit_uri: https://github.com/opengisch/QgisModelBaker/tree/master/docs/
 
 # Theme configuration
 theme:
@@ -17,8 +17,18 @@ theme:
 # Page tree
 nav:
   - Home: index.md
-  - Installation & maintenance (en): installation.md
-  - Development (en): development.md
+  - User Guide:
+    - Get Started: user_guide/get_started.md
+    - Import INTERLIS Schema and Data: user_guide/import_workflow.md
+    - Export Data: user_guide/export_workflow.md
+    - Validate Data: user_guide/validation.md
+    - Plugin Configuration: user_guide/plugin_configuration.md
+  - Tipps & Tricks:
+    - UsabILIty Hub: background_info/usabilityhub.md
+    - Basket and Dataset Handling: background_info/basket_handling.md
+    - Relations in QGIS: background_info/relations.md
+    - Upgrade ili2db 3 to 4: background_info/upgrade_3_to_4.md
+  - Development: development.md
 
 markdown_extensions:
   - attr_list
