--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,15 +19,17 @@ nav:
   - Home: index.md
   - User Guide:
     - Get Started: user_guide/get_started.md
-    - Import INTERLIS Schema and Data: user_guide/import_workflow.md
+    - Import INTERLIS Schema and Data with the Wizard: user_guide/import_workflow.md
     - Export Data: user_guide/export_workflow.md
     - Validate Data: user_guide/validation.md
     - Plugin Configuration: user_guide/plugin_configuration.md
   - Tipps & Tricks:
+    - Meta Attributes: background_info/meta_attributes.md
     - UsabILIty Hub: background_info/usabilityhub.md
     - Basket and Dataset Handling: background_info/basket_handling.md
     - Relations in QGIS: background_info/relations.md
     - Upgrade ili2db 3 to 4: background_info/upgrade_3_to_4.md
+  #- Library: Info about the upcoming python package
   - Development: development.md
 
 markdown_extensions:
