--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,14 +13,23 @@ theme:
   name: material
   features:
     - navigation.tabs
+  palette:
+    - scheme: default
+      toggle:
+        icon: material/weather-night
+        name: Switch to dark mode
+    - scheme: slate
+      toggle:
+        icon: material/weather-sunny
+        name: Switch to light mode
 
 # Page tree
 nav:
   - Home: index.md
   - User Guide:
     - Get Started: user_guide/get_started.md
-    - Import INTERLIS Schema and Data with the Wizard: user_guide/import_workflow.md
-    - Export Data: user_guide/export_workflow.md
+    - Model and Data Import Workflow: user_guide/import_workflow.md
+    - Export Data Workflow: user_guide/export_workflow.md
     - Validate Data: user_guide/validation.md
     - Plugin Configuration: user_guide/plugin_configuration.md
   - Tipps & Tricks:
