--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -30,6 +30,7 @@ jobs:
           if [[ -z "${TX_TOKEN}" ]]; then
             echo "TX_TOKEN not set, skip tx push"
           else
+            tx config mapping-bulk -p qgismodelbaker-docs --source-language en --type MD -f '.md' --source-file-dir docs --expression "docs/{filepath}/{filename}.<lang>{extension}" --execute
             tx push -s
           fi
 
