--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -40,9 +40,9 @@ nav:
     - Repositories: background_info/repositories.md
     - Basket and Dataset Handling: background_info/basket_handling.md
     - UsabILIty Hub:
-      - Model Baker Integration (German): background_info/usabilityhub/modelbaker_integration.md
-      - Technical Concept (German): background_info/usabilityhub/technical_concept.md
-      - User Guide (German): background_info/usabilityhub/user_guide.md
+      - Model Baker Integration: background_info/usabilityhub/modelbaker_integration.md
+      - Technical Concept: background_info/usabilityhub/technical_concept.md
+      - User Guide: background_info/usabilityhub/user_guide.md
     - Meta Attributes: background_info/meta_attributes.md
     - Migrate from ili2db 3 to 4: background_info/upgrade_3_to_4.md
     #- Relations in QGIS: maybe from here https://github.com/signedav/interlis_relations_in_qgis
