--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -32,8 +32,10 @@ jobs:
           if [[ -z "${TX_TOKEN}" ]]; then
             echo "TX_TOKEN not set, skip tx push"
           else
+            echo "Create .tx/config mapping."
             tx config mapping-bulk -p qgismodelbaker-docs --source-language en --type MD -f '.md' --source-file-dir docs --expression "docs/{filepath}/{filename}.<lang>{extension}" --execute
-            tx push -s
+            echo "Push source files."
+            tx push -s -d
           fi
 
       - name: Pull translations
@@ -42,6 +44,7 @@ jobs:
           if [[ -z "${TX_TOKEN}" ]]; then
             echo "TX_TOKEN not set, skip tx pull"
           else
+            echo "Pull translations."
             tx pull -a
           fi
 
