set site_url to hopefully get proper 404 error

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,6 +2,7 @@
 site_name: QGIS Model Baker
 site_description: >-
   This site contains documentation about QGIS Model Baker
+site_url: http://127.0.0.1:8000/
 
 # Repository
 repo_name: opengisch/QgisModelBaker
