use path relative to the projecttopping file in tests

--- a/QgisModelBaker/tests/testdata/ilirepo/24/layertree/opengis_projecttopping_qml_KbS_LV95_V1_4.yaml
+++ b/QgisModelBaker/tests/testdata/ilirepo/24/layertree/opengis_projecttopping_qml_KbS_LV95_V1_4.yaml
@@ -3,8 +3,8 @@ legend:
         group: true
         child-nodes:
             - "Belasteter_Standort (Geo_Lage_Punkt)":
-                qmlstylefile: "qml/opengisch_KbS_LV95_V1_4_004_belasteterstandort_punkt.qml"
+                qmlstylefile: "../qml/opengisch_KbS_LV95_V1_4_004_belasteterstandort_punkt.qml"
             - "Belasteter_Standort (Geo_Lage_Polygon)":
-                qmlstylefile: "qml/opengisch_KbS_LV95_V1_4_001_belasteterstandort_polygon.qml"
+                qmlstylefile: "../qml/opengisch_KbS_LV95_V1_4_001_belasteterstandort_polygon.qml"
     - "Parzellenidentifikation":
-        qmlstylefile: "qml/opengisch_KbS_LV95_V1_4_005_parzellenidentifikation.qml"
+        qmlstylefile: "../qml/opengisch_KbS_LV95_V1_4_005_parzellenidentifikation.qml"
