support layertree key in YAML of project topping file

--- a/QgisModelBaker/tests/testdata/ilirepo/24/layertree/opengis_layertree_KbS_LV95_V1_4.yaml
+++ b/QgisModelBaker/tests/testdata/ilirepo/24/layertree/opengis_layertree_KbS_LV95_V1_4.yaml
@@ -1,4 +1,4 @@
-legend:
+legend: #best practice is layertree here, but test the backwards compatibility
   - "Belasteter Standort":
       group: true
       checked: true
