introduce test repo called usabilityhub because it does not make sense those testfiles are in the 24 repo (what is actuall to test interlis 2.4)

--- a/QgisModelBaker/tests/testdata/ilirepo/usabilityhub/layertree/opengis_projecttopping_ilidata_KbS_LV95_V1_4.yaml
+++ b/QgisModelBaker/tests/testdata/ilirepo/usabilityhub/layertree/opengis_projecttopping_ilidata_KbS_LV95_V1_4.yaml
@@ -3,9 +3,9 @@ layertree:
         group: true
         child-nodes:
             - "Belasteter_Standort (Geo_Lage_Punkt)":
-                qmlstylefile: "../qml/opengisch_KbS_LV95_V1_4_004_belasteterstandort_punkt.qml"
+                qmlstylefile: ../qml/opengisch_KbS_LV95_V1_4_004_belasteterstandort_punkt.qml
             - "Parzellenidentifikation":
-                qmlstylefile: "ilidata:ch.opengis.topping.opengisch_KbS_LV95_V1_4_005"
+                qmlstylefile: ilidata:ch.opengis.topping.opengisch_KbS_LV95_V1_4_005
     - "Other Layers":
         group: true
         child-nodes:
