get the packages like modelbaker in the ci step translation, to push strings from library to transifex

--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -70,6 +70,9 @@ jobs:
           submodules: recursive
       - name: Install dependencies
         run: sudo pip install qgis-plugin-ci
+      - name: Package PyPI Packages
+        run: |
+          sudo ./scripts/package_pip_packages.sh
       - name: 🌍 Push translations
         run: |
           qgis-plugin-ci push-translation ${TX_TOKEN}
