--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -36,6 +36,7 @@ repos:
     hooks:
       - id: black
 
+  # Automatically upgrade syntax for newer versions
   - repo: https://github.com/asottile/pyupgrade
     rev: v3.3.1
     hooks:
