--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -24,9 +24,8 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: Install Requirements
-        run: |
-            sudo pip install mkdocs-material mkdocs-static-i18n==0.31
+      - name: Install Python requirements
+        run: pip install -r requirements.txt
 
       - name: Install Transifex client
         run: |
