--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -25,7 +25,7 @@ jobs:
           python-version: '3.10'
 
       - name: Install Python requirements
-        run: pip install -r requirements.txt
+        run: pip install -r ./docs/.utils/requirements.txt
 
       - name: Install Transifex client
         run: |
