--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -4,7 +4,7 @@ site_description: >-
   This site contains documentation about QGIS Model Baker
 site_url: https://opengisch.github.io/QgisModelBaker/
 
-docs_dir: .
+docs_dir: content
 
 # Repository
 repo_name: opengisch/QgisModelBaker
